kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  annotations:
    external-dns.kubernetes.io/controller: none
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Cilium Hubble UI
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/svg/cilium-hubble.svg
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - "${APP_SUBDOMAIN}.${PUBLIC_DOMAIN}"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
